# rust_grammar

./: API_DOCUMENTATION.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  README.old.md  config.example.yaml  deploy.sh  ecosystem.config.js  example-client.js  example-client.py  pm2-start.sh  sample.txt  test-api.sh  web-client.html
benches/: performance.rs
src/: analysis_reports.rs  comprehensive_analysis.rs  config.rs  error.rs  lib.rs  main.rs  visualizer.rs  word_lists.rs
src/dictionaries/: abbreviations.rs  irregular_verbs.rs  mod.rs  syllable_dict.rs
src/grammar/: checker.rs  mod.rs  passive_voice.rs  sentence_splitter.rs
tests/: integration_tests.rs
