[package]
name = "Rust_Grammar"
version = "2.1.0"
edition = "2025"
authors = ["Eeman Majumder eeman.majumder@gmail.com"]
description = "A comprehensive, production-ready text analysis tool"
license = "MIT"
repository = "https://github.com/yourusername/text-analyzer"
keywords = ["text", "analysis", "nlp", "grammar", "readability"]
categories = ["text-processing", "command-line-utilities"]

[dependencies]
# CLI and configuration
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Web server (for API)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Text processing
regex = "1.10"
lazy_static = "1.4"
unicode-segmentation = "1.11"
unicode-normalization = "0.1"

# Performance
rayon = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Document parsing (optional features)
pulldown-cmark = { version = "0.9", optional = true }
scraper = { version = "0.18", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
test-case = "3.3"
pretty_assertions = "1.4"
tempfile = "3.8"

[[bench]]
name = "performance"
harness = false

[features]
default = ["markdown", "html"]
markdown = ["pulldown-cmark"]
html = ["scraper"]
full = ["markdown", "html"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
